<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:id="@id/TableLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:id="@id/TableRow01" android:background="#ff005af2" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon" />
            <TextView android:textSize="20.0dip" android:textColor="#ffffff00" android:layout_gravity="center" android:id="@id/TextView01" android:paddingLeft="10.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" />
        </TableRow>
        <TableRow android:id="@id/TableRow02" android:paddingTop="20.0px" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@id/Author_label" android:paddingLeft="10.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_author" />
            <TextView android:id="@id/App_Author" android:paddingLeft="10.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_author" />
        </TableRow>
        <TableRow android:id="@id/TableRow03" android:paddingTop="5.0px" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@id/Version_label" android:paddingLeft="10.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_version" />
            <TextView android:id="@id/App_Version" android:paddingLeft="10.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_version" />
        </TableRow>
    </TableLayout>
    <LinearLayout android:gravity="center" android:id="@id/LinearLayout01" android:paddingTop="200.0px" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/AboutOK" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="OK" android:width="100.0px" />
    </LinearLayout>
</FrameLayout>